apps/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Bad-test
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
