apps/nats-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:2.10
        ports:
        - containerPort: 4222
