apps/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-test
spec:
  containers:
  - name: test
    image: busybox
    command:
      - sh
      - -c
      - "echo 'Hello from CSI storage' > /data/file.txt && sleep 3600"
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: minio-pvc
