apps/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  selector:
    app: http
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
