apps/nats-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: default
spec:
  selector:
    app: nats
  ports:
  - port: 4222
    targetPort: 4222
  type: ClusterIP
