apps/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
