apps/websocket-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: websocket
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
